# CF-Buckhead-Analytics-Project

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  hello_world.py  pyproject.toml  random.py  requirements.txt
data/example_data/: cohort_retention_2024-09-28.csv  feature_importance_2024-09-28.csv  model_metadata.json  model_metadata_2024-09-28.json  outreach_2024-09-28.csv
data/processed/: feature_store_2024-09-28.parquet  scores_2025-10-22.csv  scores_2025-10-23.csv  training_dataset_2024-09-28.parquet
data/raw/: Attendance.csv
data/raw_sample_dylan/: Cancellations.csv  Members.csv  Store_Sales.csv
models/: churn_model.pkl
notebooks/: 01_explore.ipynb  02_modeling.ipynb
reports/outreach/: top10_2025-10-23.csv
src/cf_buckhead_analytics/: __init__.py  churn_regression.py  config.py  dashboard.py  data_prep.py  example.py  feature_engineering.py  risk_scoring.py  training_data.py
tests/: test_example.py  test_feature_engineering.py  test_training_data_module.py
