[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "cf-buckhead-analytics"
version = "0.1.0"
description = "Analytics utilities for the CF Buckhead project."
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name = "Dylan Alexander", email = "dylanjalexander2@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
  "matplotlib>=3.10.7",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.7.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.6.9",
  "black>=24.8.0",
  "isort>=5.13.2",
  "pre-commit>=3.7",
  "pandas-stubs>=2.2.2",
  "ipykernel>=6.29",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cf_buckhead_analytics"]

# ---- Tooling config ----

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["cfb_analytics"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-select = [
  "A",   # builtins
  "B",   # bugbear
  "C4",  # comprehensions
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
]
ignore = [
  "E501",  # handled by black/line-length
]
src = ["src"]

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
warn_unreachable = true
show_error_codes = true
pretty = true
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[tool.pytest.ini_options]
addopts = "-ra -q --cov=cfb_analytics --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
